--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,9 +15,13 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    
-                    <li><a href="/login">Log in</a></li>
-                    <li><a href="/register">Sign up</a></li>
+                    <% if(!currentUser){%>
+                        <li><a href="/login">Log in</a></li>
+                        <li><a href="/register">Sign up</a></li>
+                        <%}else{%>
+                            <li><a href=""><%=currentUser.username%></a></li>
+                            <li><a href="/logout">Log Out</a></li>
+                        <%}%>
                     
 
                 </ul>
