--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,6 @@
 <%- include("partials/header")%>
 <h1>landing</h1>
 <p><a href="/bus">viwe bus</a></p>
+<div><a href="/login" class="btn btn-primary">Login</a></div>
+<div><a href="/register" class="btn btn-primary">Signup</a></div>
 <%- include("partials/footer") %>
